<resources>
    <string name="app_name">Time tip</string>
    <string name="cost_of_service">cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing 20%</string>
    <string name="good_18">Good 18%</string>
    <string name="ok_15">Ok 15%</string>
    <string name="round_of_tip">Round of tip</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip_amount:%s</string>
</resources>